Add fields to assignment request, and GET+PUT endpoints for AssignmentRequest
